bug: fix response body null bug #13